# AdePT

examples/: CMakeLists.txt
examples/ExampleTileTB/: AdeptIntegration.cpp  AdeptIntegration.h  CMakeLists.txt  README.md  TileBasicID.cuh  TileScoring.cu  TileScoring.h
examples/ExampleTileTB/include/: DetectorMessenger.hh  EMShowerMessenger.hh  TileSD.hh
examples/ExampleTileTB/macros/: TileTB_2B1EB.gdml  testEm3.mac.in  testEm3G4.mac.in  testTile.mac.in  testTileG4.mac.in
examples/ExampleTileTB/src/: DetectorConstruction.cc  DetectorMessenger.cc  EMShowerMessenger.cc  EventAction.cc  EventActionMessenger.cc  PrimaryGeneratorMessenger.cc  TileSD.cc
